# poc_api

./: .env  .gitignore  .gitlab-ci.yml  README.md  auth.json  env.template  pyproject.toml  pytest.ini  requirements.docx  requirements.txt
.github/workflows/: ci.yml
modules/: __init__.py
src/api/: base_api.py  client.py  config.py
src/taf/: __init__.py  api_client.py  config.py  logger.py
src/taf/api/: base_api.py  client.py
tests/: conftest.py  test_health.py
tests/api/: test_health.py
tests/ui/: README.md  conftest.py  save_auth_state.py  test_1.py  test_acme_complete_sso_workflow.py  test_acme_login.py  test_example_ui.py
